# GearShiftControl

./: .gitignore  CMakeLists.txt  GearShiftControl.sln  GearShiftControl.vcxproj  GearShiftControl.vcxproj.filters  README.md
Res/: Devices.json  GearProperties.json  Security.json  Simulation.json
Src/App/: Main.cpp
Src/Core/Command/: Command.h
Src/Core/Command/GearBoxControl/: CommandUpdateGear.h
Src/Core/Command/GearBoxShifter/: CommandManualShift.h  CommandSecuentialShift.h
Src/Core/Command/Keyboard/: CommandA.h  CommandB.h  CommandModeH.h  CommandModeSecuential.h  CommandSimulatedSpeed.h
Src/Core/Model/: Gear.h  Servo.h
Src/Core/Model/Configuration/: Configuration.h  SecurityConfiguration.h  ShiftMode.h
Src/Core/Model/Event/: GearBoxShifterEventCode.h
Src/Infrastructure/Configuration/: DataReader.h
Src/Infrastructure/Configuration/Json/: JsonReader.cpp  JsonReader.h
Src/Infrastructure/Device/: DeviceConstants.h  DeviceManager.h
Src/Infrastructure/Device/GearBoxControl/: GearBoxControlDevice.cpp  GearBoxControlDevice.h
Src/Infrastructure/Device/GearBoxShifter/: GearBoxShifterDevice.h
Src/Infrastructure/Device/Keyboard/: KeyboardDevice.h
Src/Infrastructure/Security/: ClutchPressedChecker.h  ShiftGearChecker.h
Src/Infrastructure/Sensor/: ClutchHallSensor.h
Src/Services/Data/: ConcurrentData.cpp  ConcurrentData.h
Src/Services/Device/: Device.h
Src/Services/Device/Input/: InputDevice.h
Src/Services/Listener/: DeviceListener.h
Src/Services/Mapping/: JsonMapper.h
Src/Services/Security/: SafetyChecker.h
include/: wiringPiMock.h
(+19 files in other folders)
